# bragi-theme-zelda

./: .gitignore  ASSETS.md  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bragi-released-rebuild.yml  bragi-released.yml  ci.yml  release.yml
docker/: admin.Dockerfile  delivery.Dockerfile
src/bragi_theme_zelda/: __init__.py  image_frame.py  plugin.py  section.py  template_helpers.py
src/bragi_theme_zelda/admin/: __init__.py  routes.py
src/bragi_theme_zelda/admin/templates/admin/: zelda_rom.html
src/bragi_theme_zelda/delivery/: __init__.py  rom_routes.py
src/bragi_theme_zelda/rom/: __init__.py  cache.py  decoder.py  manifest_la.py  palettes.py  upload.py
src/bragi_theme_zelda/static/css/: print.css  theme.css
src/bragi_theme_zelda/static/js/: cosplay.js
src/bragi_theme_zelda/templates/delivery/: _breadcrumbs.html  _callout_textbox.html  _gb_frame.html  _rom_banner.html  _site_nav.html  base.html
src/bragi_theme_zelda/templates/delivery/errors/: 404.html  500.html
src/bragi_theme_zelda/templates/delivery/home/: pause_menu.html
tests/: conftest.py
tests/contrib/: test_rom_hookimpls.py  test_theme_registration.py
tests/data/: __init__.py  rom_fixtures.py
tests/integration/: test_rom_admin.py  test_rom_route.py  test_rom_template_helper.py  test_walkthrough_pages.py
tests/unit/: test_image_frame.py  test_palette_tokens.py  test_placeholder_invariant.py  test_rom_cache.py  test_rom_decoder.py  test_rom_palettes.py  test_rom_upload_validation.py  test_section_detection.py
