[tool.poetry]
name = "bragi-theme-zelda"
version = "0.1.1"
description = "Link's-Awakening-flavoured theme for the bragi CMS, used by zelda.eelcowesemann.nl"
authors = ["Eelco Wesemann <claude-ai@init1.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bragi_theme_zelda", from = "src" }]
include = [
    "src/bragi_theme_zelda/templates/**/*",
    "src/bragi_theme_zelda/static/**/*",
]

[tool.poetry.dependencies]
python = "^3.14"
# jinja2 is imported directly by plugin.py (PackageLoader, Environment type).
# bragi is the host app and is always present in the deployment environment;
# it is a dev dep here (git dep) so the published wheel has no direct-URL
# dependency that PyPI rejects.
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
# bragi is the host. Git dep because bragi isn't on PyPI (the bragi name there
# is held by an unrelated project per bragi's CONTEXT.md). Lives in dev so
# the published wheel carries no direct-URL dep (PyPI rejects those).
bragi = { git = "https://github.com/sgaduuw/bragi.git", tag = "v1.26.0" }
ruff = "^0.6"
mypy = "^1.11"
pytest = "^8.0"
fonttools = "^4.63.0"
brotli = "^1.2.0"

[tool.poetry.plugins."bragi.plugins"]
theme_zelda = "bragi_theme_zelda.plugin"

[tool.ruff]
line-length = 88
# ruff 0.6.x tops out at py313; bump when upgrading ruff past 0.7.
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

# bragi does not ship py.typed (it's deploy-as-container, not a PyPI lib).
# Silence mypy's import-untyped error for the bragi imports in this package.
[[tool.mypy.overrides]]
module = "bragi.*"
ignore_missing_imports = true

# pluggy's @hookimpl decorator doesn't preserve the decorated function's
# type signature, so mypy fires "untyped-decorator" in strict mode.
# The hook contract is tested behaviourally; suppressing here is intentional.
[[tool.mypy.overrides]]
module = "bragi_theme_zelda.plugin"
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
