[tool.poetry]
name = "bragi-theme-zelda"
version = "0.4.10"
description = "Link's-Awakening-flavoured theme for the bragi CMS, used by zelda.eelcowesemann.nl"
authors = ["Eelco Wesemann <claude-ai@init1.nl>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "bragi_theme_zelda", from = "src" }]
include = [
    "src/bragi_theme_zelda/templates/**/*",
    "src/bragi_theme_zelda/static/**/*",
]

[tool.poetry.dependencies]
python = "^3.14"
# jinja2 is imported directly by plugin.py (PackageLoader, Environment type).
# bragi is the host app and is always present in the deployment environment;
# it stays a dev dep so the published wheel has no runtime dep on bragi —
# the consumer container has bragi installed already.
jinja2 = "^3.1"
# Pillow provides PIL.Image, used by rom.decoder to render 2bpp tiles into
# PNG bytes at request time. Runtime dep because the delivery route depends
# on it for every sprite extraction.
pillow = "^12.2"

[tool.poetry.group.dev.dependencies]
# bragi ships on PyPI as `bragi-cms` from v1.27.0 (Pillow precedent:
# distribution name differs from import name; `bragi` PyPI name is held by
# Managarm). Import path is unchanged: `from bragi.api import ...`.
bragi-cms = "^1.29"
ruff = "^0.6"
mypy = "^1.11"
pytest = "^8.0"
fonttools = "^4.63.0"
brotli = "^1.2.0"

[tool.poetry.plugins."bragi.plugins"]
theme_zelda = "bragi_theme_zelda.plugin"

[tool.ruff]
line-length = 88
# ruff 0.6.x tops out at py313; bump when upgrading ruff past 0.7.
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src"]

# bragi does not ship py.typed (it's deploy-as-container, not a PyPI lib).
# Silence mypy's import-untyped error for the bragi imports in this package.
[[tool.mypy.overrides]]
module = "bragi.*"
ignore_missing_imports = true

# pluggy's @hookimpl decorator doesn't preserve the decorated function's
# type signature, so mypy fires "untyped-decorator" in strict mode.
# The hook contract is tested behaviourally; suppressing here is intentional.
[[tool.mypy.overrides]]
module = "bragi_theme_zelda.plugin"
disable_error_code = ["untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
